--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = [{ name = "Robert Leo", email = "robert.leo.jonsson@gmail.com" }]
 readme = "README.md"
 requires-python = ">=3.11"
 
-dependencies = []
+dependencies = ["numpy>=1.26"]
 
 [project.scripts]
 
@@ -26,9 +26,11 @@ skip = ["*musllinux", "*win"]
 [dependency-groups]
 dev = [
     "fire>=0.7.1",
+    "ipykernel>=7.0.1",
     "pybind11>=3.0.1",
     "pybind11-stubgen>=2.5.5",
     "ruff>=0.14.1",
+    "slamd>=2.1.12",
 ]
 
 
