--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 
 dependencies = [
+    "einops>=0.8.1",
     "jaxtyping>=0.3.3",
     "numpy>=1.26",
     "opencv-contrib-python>=4.11.0.86",
